chore: Finalizado a documentação da rota de autênticação.
